--- a/.gitignore
+++ b/.gitignore
@@ -31,3 +31,11 @@ composer.lock
 /config/secrets/prod/prod.decrypt.private.php
 /public/bundles/
 /var/
+
+template/
+!template/.gitkeep
+!template/generated/.gitkeep
+
+tests/template/
+!tests/template/.gitkeep
+!tests/template/generated/.gitkeep
