--- a/composer.json
+++ b/composer.json
@@ -23,7 +23,8 @@
         "symfony/dependency-injection": "^5.3",
         "symfony/config": "^5.3",
         "symfony/yaml": "^5.3",
-        "symfony/http-kernel": "^5.3"
+        "symfony/http-kernel": "^5.3",
+        "thecodingmachine/safe": "^1.3"
     },
     "require-dev": {
         "infection/infection": "^0.25.3",
