--- a/config/services.yaml
+++ b/config/services.yaml
@@ -10,3 +10,5 @@ services:
     exclude:
       - '../src/DependencyInjection/'
       - '../src/PhpMethodRunnerBundle.php'
+
+  LeoVie\PhpMethodRunner\Configuration\Configuration: ~
