--- a/config/services.yaml
+++ b/config/services.yaml
@@ -12,3 +12,7 @@ services:
       - '../src/PhpMethodRunnerBundle.php'
 
   LeoVie\PhpMethodRunner\Configuration\Configuration: ~
+
+directories:
+  template_directory: ../template/
+  generated_directory: ../generated/
