--- a/config/services.yaml
+++ b/config/services.yaml
@@ -13,6 +13,7 @@ services:
 
   LeoVie\PhpMethodRunner\Configuration\Configuration: ~
 
-directories:
-  template_directory: ../template/
-  generated_directory: ../generated/
+leovie_php_method_runner:
+  directories:
+    template_directory: ../template/
+    generated_directory: ../generated/
