--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
     "name": "leovie/php-method-runner",
     "description": "Run php methods.",
-    "license": "proprietary",
+    "license": "BSD-3-Clause",
     "type": "symfony-bundle",
     "autoload": {
         "psr-4": {
